Use ArrayList which allows mutability (#23)